# upscaleforge

./: .gitignore  README.md
backend/: main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  HiddenFileInput.jsx  ImageWorkspace.jsx  ProcessingOverlay.jsx  SettingsPanel.jsx  ShortcutsModal.jsx  TopNav.jsx  VideoWorkspace.jsx
frontend/src/context/: AppContext.jsx
frontend/src/hooks/: useKeyboardShortcuts.js
