[project]
name = "upscaleforge-backend"
version = "1.0.0"
description = "AI Image & Video Upscaling Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
    "pillow>=10.0.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
gpu = [
    "basicsr>=1.4.2",
    "realesrgan>=0.3.0",
    "gfpgan>=1.3.8",
    "torch>=2.0.0",
]
